# kazakh-identification

./: .gitignore  main.py  pyproject.toml
data/araline-en/: prompt.md
data/araline-kk/: prompt.md
data/araline-ru/: prompt.md
data/lang-detector/: prompt.md  tests.json
src/: __main__.py
src/agents/: agent.py  araline_en.py  araline_kk.py  araline_ru.py  lang_detector.py
src/models/: base.py  bilstm.py  fasttext.py  kaznlp.py  knn.py  llm.py  transformer_berg.py
src/scripts/: run_bert.py  run_fasttext.py  run_knn.py  run_lstm.py
