[project]
name = "kazakh-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.13",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "google-genai>=1.55.0",
    "openai>=2.12.0",
    "sqlalchemy>=2.0.45",
]
