[project]
name = "kazakh-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.13",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "fasttext>=0.9.3",
    "google-genai>=1.55.0",
    "joblib>=1.5.3",
    "ollama>=0.6.1",
    "openai>=2.12.0",
    "scikit-learn==1.7.2",
    "sqlalchemy>=2.0.45",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "transformers>=4.53.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
